// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.cirruslabs.tartd";
option java_outer_classname = "TardDaemon";
option objc_class_prefix = "tartd";

package tartd;

service Service {
  // Sends a greeting
  rpc Build (BuildRequest) returns (TartReply) {}
  rpc Start (StartRequest) returns (TartReply) {}
  rpc TartCommand (TartCommandRequest) returns (TartReply) {}
  rpc Launch (LaunchRequest) returns (TartReply) {}
}

message TartCommandRequest {
  string command = 1;
  repeated string arguments = 2;
}

message BuildRequest {
  string name = 1;
  optional int32 cpu = 2;
  optional int32 memory = 3;
  optional string user = 4;
  optional string mainGroup = 16;
  optional bool insecure = 5;
  optional string cloudImage = 6;
  optional string remoteContainerServer = 7;
  optional string aliasImage = 8;
  optional string fromImage = 9;
  optional string ociImage = 10;
  optional bytes sshAuthorizedKey = 11;
  optional bytes vendorData = 12;
  optional bytes userData = 13;
  optional bytes networkConfig = 14;
  optional int32 diskSize = 15;
}

message LaunchRequest {
  string name = 1;
  optional int32 cpu = 2;
  optional int32 memory = 3;
  optional string user = 4;
  optional string mainGroup = 21;
  optional bool insecure = 5;
  optional string cloudImage = 6;
  optional string remoteContainerServer = 7;
  optional string aliasImage = 8;
  optional string fromImage = 9;
  optional string ociImage = 10;
  optional bytes sshAuthorizedKey = 11;
  optional bytes vendorData = 12;
  optional bytes userData = 13;
  optional bytes networkConfig = 14;
  optional int32 diskSize = 15;
  repeated string dir = 16;
  repeated string netBridged = 17;
  optional bool netSofnet = 18;
  optional string netSoftnetAllow = 19;
  optional bool netHost = 20;
}

message StartRequest {
  string name = 1;
}

message Error {
  int32 code = 1;
  string reason = 2;
}

message TartReply {
  oneof response {
	Error error = 1;
	string output = 2;
  }
}